src/main/java/com/example/YogaRestAPI/errors/Lounge/NotSupportedTimeForLounge.java
package com.example.YogaRestAPI.errors.Lounge;

public class NotSupportedTimeForLounge extends RuntimeException{
}
